namespace CourseworkApp.Models.Enums
{
    public enum SensorStatus
    {
        Active,
        Inactive,
        Malfunction
    }
}